tests/baselines/reference/generatorTypeCheck55.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck55.ts(2,30): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck55.ts (1 errors) ====
    function* g() {
        var x = class C extends (yield) {};
                                 ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
    }